2008-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_tab), (murrine_draw_menu_frame):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
	Better tab highlighting, upgrade suggested

2008-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_trough),
	(murrine_draw_scrollbar_trough):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_trough),
	(murrine_rgba_draw_scrollbar_trough):
	* src/murrine_style.c (murrine_style_realize):
	Do not change progressbar/scrollbar trough with the contrast function

2008-09-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_widget_is_rgba),
	(murrine_set_widget_parameters):
	Check if widget is not null before proceed asking for the screen

2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (get_contrast):
	* src/cairo-support.h:
	* src/murrine_style.c (murrine_style_init_from_rc),
	(murrine_style_realize):
	Completed contrast function: now it shades progressbars borders 
	and other widgets

2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_tab), (murrine_draw_separator),
	(murrine_draw_toolbar), (murrine_draw_statusbar),
	(murrine_draw_resize_grip):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
	* src/murrine_style.c (murrine_style_realize):
	More fixes for the contrast function

2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_realize):
	Reworked contrast function, your themes may change

2008-09-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Added Clearlooks ability to draw better menuitem separators using
	style properties. Read from Clearlooks gtkrc for more info

2008-09-01  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_rc_style.c (murrine_rc_style_register_types),
	(murrine_rc_style_finalize), (murrine_rc_style_class_init),